--- a/kcmfs/Makefile
+++ b/kcmfs/Makefile
@@ -17,7 +17,9 @@ ADDR_DATA = 0xc000
 
 VERBOSE = -V
 CCFLAGS = $(VERBOSE) $(PLATFORM) --code-loc $(ADDR_CODE) --data-loc $(ADDR_DATA) \
-          --no-std-crt0 --opt-code-size --out-fmt-ihx
+          --no-std-crt0 --opt-code-size --out-fmt-ihx \
+	  -DJOYMODE
+
 OBJECTS = $(CRT0)
 SOURCES = menu.c
 ROMFILE = menu.rom
